@@ -1,9 +1,13 @@
 class MigrateHasEmailsToVersion1 < ActiveRecord::Migration
   def self.up
-    Rails::Plugin.find(:has_emails).migrate(1)
+    ActiveRecord::Migrator.new(:up, "#{Rails.root}/../../db/migrate", 0).migrations.each do |migration|
+      migration.migrate(:up)
+    end
   end
   
   def self.down
-    Rails::Plugin.find(:has_emails).migrate(0)
+    ActiveRecord::Migrator.new(:up, "#{Rails.root}/../../db/migrate", 0).migrations.each do |migration|
+      migration.migrate(:down)
+    end
   end
 end
