@@ -1,0 +1,5 @@
+class << Rails
+  attr_accessor :plugins
+end
+
+Rails.plugins = initializer.loaded_plugins
