@@ -1,6 +1,6 @@
 require File.expand_path(File.dirname(__FILE__) + '/../test_helper')
 
-class EmailAfterBeingDeliveredTest < Test::Unit::TestCase
+class EmailAfterBeingDeliveredTest < ActiveSupport::TestCase
   def setup
     ActionMailer::Base.deliveries = []
     
