@@ -1,5 +1,7 @@
 == master
 
+* Add compatibility with has_messages 0.4.0 / Rails 2.3
+
 == 0.2.1 / 2009-01-11
 
 * Add compatibility with has_messages 0.3.1 / state_machine 0.5.0
